--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,3 @@
 [build-system]
-requires = ["setuptools>=58.0.4", "wheel", "Cython>=0.29.24"]
+requires = ["Cython>=0.29.24", "numpy>=1.0.0", "setuptools>=58.0.4", "wheel"]
 build-backend = "setuptools.build_meta"
-
-[project]
-dependencies = [
-    "numpy >= 1.0.0"
-]
